--- a/app/globals.css
+++ b/app/globals.css
@@ -21,8 +21,37 @@
   }
 }
 
+html,
+body {
+  overflow-x: hidden;
+}
+
 body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+/* For WebKit browsers (Chrome, Safari, Edge, Opera, Brave) */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #005b6e; /* Blue */
+  border-radius: 6px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #0056b3;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* For Firefox */
+* {
+  scrollbar-width: thin; /* "auto" or "thin" */
+  scrollbar-color: #005b6e #f1f1f1; /* thumb color | track color */
 }
